# sudoku

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  arith.cpp  arith.h  board.cpp  board.h  main.py  puzzle1.txt  puzzle2.out  puzzle2.txt  pybindtest.py  render.yaml  requirements.txt  script.py  solvingtest.sh  sudoku  sudoku.cpp  wrapper.cpp
output/: puzzle1.out  puzzle3.out
puzzles/: puzzle1.txt  puzzle2.txt  puzzle3.txt
solutions/: puzzle1.gt  puzzle2.gt  puzzle3.gt
